fix sidebar item container overflow

--- a/src/components/gwf-vis-host-sidebar-item-container/gwf-vis-host-sidebar-item-container.css
+++ b/src/components/gwf-vis-host-sidebar-item-container/gwf-vis-host-sidebar-item-container.css
@@ -17,6 +17,7 @@
   border-radius: var(--leaflet-control-border-radius);
   box-shadow: var(--leaflet-control-box-shadow);
   max-width: 100%;
+  overflow: hidden;
 }
 
 gwf-vis-host-collapse::part(header) {
